test/pos/EqConstr0.msmt_
; Sorts
(declare-sort Obj_a 0)

; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((y Obj_a)(x Int)) (=> (= x y) (= y x))))

