test/neg/lit00.msmt_
; Sorts
(declare-sort Peano 0)

; Constants
(declare-const _One Peano)
(declare-const _Zero Peano)

(assert (distinct _One _Zero))

; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((xOne Peano)(xZero Peano)) (=> (and (= xZero _Zero) (= xOne _One)) (= xZero xOne))))

